examples/test/testpolicy2199.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2199
  namespace: namespace227
spec:
  podSelector:
    matchLabels:
      key23: value37
      key18: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value30
          key13: value5
          key16: value9
      podSelector:
        matchLabels:
          key27: value3
          key20: value25
          key35: value8
